kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-dashboard
  annotations:
    # -- Homepage annotations
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Networking
    gethomepage.dev/name: Hubble
    gethomepage.dev/icon: cilium.png
    gethomepage.dev/pod-selector: app.kubernetes.io/name=hubble-ui
spec:
  hostnames: ["hubble.chestr.dev"]
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
